--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-        <script src="https://rish-16.github.io/rish-cache/javascript/stylus.js" charset="utf-8"></script>
+        <script src="https://rish-16.github.io/rish-cache/javascript/stylus.min.js" charset="utf-8"></script>
         <script src="styles.js"></script>
         <script src="main.js"></script>
     </head>
